crates/test-files/fixtures/compile_errors/unsafe_misuse.fe
unsafe fn mod_priv() {}

pub unsafe fn mod_pub() {
    mod_priv()
}

pub fn f() {
    mod_priv()
}

pub fn g() {
    unsafe {
        mod_priv()
    }
}

contract Foo {
    pub unsafe fn pub_self(self) {}

    pub unsafe fn pub_noself() {}

    unsafe fn priv_nonself() {
        mod_priv()
        mod_pub()
        priv_nonself()
    }

    unsafe fn priv_self(self) {
        self.priv_self2()
    }

    unsafe fn priv_self2(self) {}

    fn bar(self) {
        self.priv_self()
        priv_nonself()
        unsafe {
            self.priv_self()
            priv_nonself()
        }
    }
}
